--- a/Rizz-game.html
+++ b/Rizz-game.html
@@ -6,54 +6,69 @@
   <title>Rizzler: Drop Your Best Line</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    :root{
+      --gold:#e1bf78; --blue:#064D95; --green:#06954E; --red:#950606;
+    }
     body{font-family:'Montserrat',sans-serif;background:#000;color:#fff;text-align:center;padding:20px;margin:0;overflow:hidden}
-    .container{max-width:640px;margin:0 auto;border:2px solid #e1bf78;border-radius:15px;padding:20px;box-shadow:0 0 20px #e1bf78}
-    h1{font-size:2em;color:#e1bf78;margin-bottom:10px;text-shadow:0 0 10px #e1bf78}
-    h1 span{animation:pulse 2s infinite}
+    .container{max-width:640px;margin:0 auto;border:2px solid var(--gold);border-radius:15px;padding:20px;box-shadow:0 0 20px var(--gold)}
+    h1{font-size:2em;color:var(--gold);margin-bottom:10px;text-shadow:0 0 10px var(--gold)}
+    h1 .rizz{color:var(--red);animation:pulseRed 1.6s infinite}
     button{padding:12px 20px;margin:8px;font-size:1em;border:none;border-radius:22px;cursor:pointer;transition:transform .2s,box-shadow .2s;color:#fff}
     button:hover{transform:scale(1.06);box-shadow:0 0 15px currentColor}
-    #speak-btn{background:#06954E}
-    #listen-btn{background:#064D95}
-    #accept-btn,#send-btn{background:#950606}
-    #next-btn{background:#950606}
+    #enter-btn{background:var(--red);color:#fff}
+    #speak-btn{background:var(--green)}
+    #listen-btn{background:var(--blue)}
+    #accept-btn,#send-btn{background:var(--red)}
+    #next-btn{background:var(--red)}
     #profile-form,#listen-section,#match-section{margin-top:20px}
-    input[type="text"]{padding:10px;margin:5px;border:1px solid #e1bf78;border-radius:10px;background:#222;color:#fff;font-family:'Montserrat',sans-serif;width:calc(100% - 24px)}
+    input[type="text"]{padding:10px;margin:5px;border:1px solid var(--gold);border-radius:10px;background:#222;color:#fff;font-family:'Montserrat',sans-serif;width:calc(100% - 24px)}
     #me-line{opacity:.85;margin:6px 0 12px}
     #audio-player{margin:16px auto;width:100%}
-    #chat-window{height:260px;overflow-y:auto;border:1px solid #e1bf78;border-radius:10px;padding:10px;background:#111;margin-bottom:10px;text-align:left}
+    #chat-window{height:260px;overflow-y:auto;border:1px solid var(--gold);border-radius:10px;padding:10px;background:#111;margin-bottom:10px;text-align:left}
     .chat-message{padding:8px 10px;margin:6px 0;border-radius:12px;max-width:85%;word-wrap:break-word;animation:slideIn .3s ease-out;display:inline-block}
-    .sent{background:#06954E;margin-left:auto}
-    .received{background:#064D95;margin-right:auto}
+    .sent{background:var(--green);margin-left:auto}
+    .received{background:var(--blue);margin-right:auto}
     .toolbar{display:flex;gap:8px;align-items:center;justify-content:center;flex-wrap:wrap;margin-top:8px}
     .toolbar input[type="text"]{flex:1;min-width:180px}
-    .icon-btn{background:#064D95}
+    .icon-btn{background:var(--blue)}
     .hidden{display:none}
     #live-remote{width:100%;margin-top:8px}
-    @keyframes pulse{0%{opacity:1}50%{opacity:.6}100%{opacity:1}}
+    /* Inline tune prompt */
+    #tune-inline{margin-top:12px;border:1px dashed var(--gold);border-radius:10px;padding:10px;background:#0d0d0d}
+    #tune-inline .label{display:block;margin-bottom:6px;opacity:.85}
+    #tune-btn{background:var(--blue)}
+    @keyframes pulseRed{
+      0%{filter:none;opacity:1}
+      50%{text-shadow:0 0 6px rgba(149,6,6,.9),0 0 14px rgba(149,6,6,.7);opacity:.8}
+      100%{filter:none;opacity:1}
+    }
     @keyframes slideIn{from{transform:translateY(14px);opacity:0}to{transform:translateY(0);opacity:1}}
     body::before{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:radial-gradient(circle,rgba(225,191,120,.1) 0%,rgba(0,0,0,0) 100%);z-index:-1}
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Rizzler: Unleash Your <span>Rizz!</span></h1>
+    <h1>Rizzler: Unleash Your <span class="rizz">Rizz</span>!</h1>
 
     <!-- LOGIN / HANDLE -->
     <div id="profile-form">
       <input type="text" id="username" placeholder="Choose your username (becomes your @handle)" required>
       <input type="text" id="photo-url" placeholder="Photo URL (optional)">
       <button id="enter-btn">Enter the Game</button>
-      <div id="target-form" class="hidden">
-        <input type="text" id="target-id" placeholder="Tune to username / station (optional)">
-        <small style="display:block;opacity:.7">Leave blank to wait for someone to tune to you. You can also deep-link with ?to=@name</small>
-      </div>
       <div id="me-line" class="hidden"></div>
     </div>
 
     <!-- MAIN -->
     <div id="main-section" class="hidden">
-      <button id="speak-btn">Speak Your Line</button>
-      <button id="listen-btn">Listen & Rizz</button>
+      <button id="speak-btn">Speak & Rizz</button>
+      <button id="listen-btn">Listen & Get Rizzed</button>
+
+      <!-- Inline tune prompt appears when needed -->
+      <div id="tune-inline" class="hidden">
+        <span class="label">Enter a username/station now</span>
+        <input type="text" id="target-inline" placeholder="@username or station">
+        <button id="tune-btn">Tune</button>
+      </div>
     </div>
 
     <!-- LISTEN (pickup line playback) -->
@@ -116,7 +131,7 @@
     function toast(msg) {
       const el = document.createElement('div');
       el.textContent = msg;
-      el.style.cssText = 'position:fixed;bottom:12px;left:50%;transform:translateX(-50%);background:#222;padding:10px 14px;border:1px solid #e1bf78;border-radius:10px;z-index:9999';
+      el.style.cssText = 'position:fixed;bottom:12px;left:50%;transform:translateX(-50%);background:#222;padding:10px 14px;border:1px solid var(--gold);border-radius:10px;z-index:9999';
       document.body.appendChild(el);
       setTimeout(()=>el.remove(), 2200);
     }
@@ -212,22 +227,36 @@
       c.on('error', (e) => console.error('Conn error:', e));
     }
 
-    // --- Ensure a connection using "Tune to" field (no prompts) ---
-    function ensureConnectionForSending() {
+    // --- Ensure a connection; if no target, reveal inline tune prompt (no alerts) ---
+    function ensureConnectionForSending({showInlineIfMissing=true} = {}) {
       if (conn && conn.open) return true;
-      const val = (document.getElementById('target-id').value || '').trim();
-      if (!val) { alert('Enter a username/station in the field above to tune.'); return false; }
+
+      const inline = document.getElementById('tune-inline');
+      const targetInput = document.getElementById('target-inline');
+      const val = (targetInput.value || '').replace(/^@/,'').trim();
+
+      if (!val) {
+        if (showInlineIfMissing) inline.classList.remove('hidden');
+        targetInput.focus();
+        return false;
+      }
       currentPeerId = val;
       conn = peer.connect(currentPeerId);
       wireConn(conn);
       return true;
     }
 
+    // Tune button handler
+    document.getElementById('tune-btn').addEventListener('click', () => {
+      if (ensureConnectionForSending({showInlineIfMissing:true})) {
+        document.getElementById('tune-inline').classList.add('hidden');
+      }
+    });
+
     // --- UI wiring ---
     document.getElementById('enter-btn').addEventListener('click', async () => {
       const nameInput = document.getElementById('username');
       const photoInput = document.getElementById('photo-url');
-      const targetForm = document.getElementById('target-form');
 
       let desiredUsername = nameInput.value.trim() || getSavedUsername();
       if (!desiredUsername) { alert('Choose a username'); return; }
@@ -237,14 +266,17 @@
 
       document.getElementById('profile-form').classList.add('hidden');
       document.getElementById('main-section').classList.remove('hidden');
-      targetForm.classList.remove('hidden');
 
       await initPeer();
 
       // Deep-link support: ?to=username
       const params = new URLSearchParams(location.search);
       const to = (params.get('to') || '').replace(/^@/,'');
-      if (to) document.getElementById('target-id').value = to;
+      if (to) {
+        document.getElementById('target-inline').value = to;
+        // pre-open inline prompt for clarity
+        document.getElementById('tune-inline').classList.remove('hidden');
+      }
     });
 
     document.getElementById('speak-btn').addEventListener('click', () => {
@@ -264,7 +296,9 @@
 
     // --- Pickup line record → send (kept working behavior) ---
     function startRecording() {
-      if (!ensureConnectionForSending()) return;
+      // If no connection yet, show inline tune prompt instead of alert
+      if (!ensureConnectionForSending({showInlineIfMissing:true})) return;
+
       navigator.mediaDevices.getUserMedia({ audio: true }).then((s) => {
         recordingStream = s;
         const mimeType = getSupportedMime();
@@ -279,13 +313,13 @@
           const blob = new Blob(audioChunks, { type: finalMime });
           sendPickupBlob(blob, finalMime);
           const btn = document.getElementById('speak-btn');
-          btn.innerText = 'Speak Your Line';
+          btn.innerText = 'Speak & Rizz';
           btn.dataset.state = '';
         };
 
         mediaRecorder.start(100);
         const btn = document.getElementById('speak-btn');
-        btn.innerText = 'Stop Recording';
+        btn.innerText = 'Stop';
         btn.dataset.state = 'recording';
       }).catch((e) => alert('Microphone access denied: ' + e.message));
     }
@@ -295,7 +329,7 @@
     }
 
     function sendPickupBlob(blob, mimeType) {
-      if (!conn || !conn.open) { alert('Not connected to a peer to send your line.'); return; }
+      if (!(conn && conn.open)) return;
       conn.send({ type: 'audio-start', mime: mimeType, size: blob.size });
       const chunkSize = 16 * 1024;
       let offset = 0;
@@ -309,12 +343,13 @@
       readNext();
     }
 
-    // --- Listening to pickup lines (no prompts) ---
+    // --- Listening to pickup lines (no prompts; inline tune if missing) ---
     function startListening() {
       document.getElementById('main-section').classList.add('hidden');
       document.getElementById('listen-section').classList.remove('hidden');
       if (!peer) { initPeer(); }
-      if (!ensureConnectionForSending()) return;
+      // If not already connected, show inline prompt
+      if (!ensureConnectionForSending({showInlineIfMissing:true})) return;
     }
 
     // --- Accept -> Live audio room handshake ---
@@ -369,7 +404,9 @@
       cleanupLiveCall();
       remoteProfile = null;
       acceptedLocal = false; acceptedRemote = false; matched = false;
-      startListening();
+      // go back to main to choose again
+      document.getElementById('listen-section').classList.add('hidden');
+      document.getElementById('main-section').classList.remove('hidden');
     }
 
     function showMatch(otherProfile) {
@@ -378,7 +415,7 @@
       const matchInfo = document.getElementById('match-info');
       matchInfo.innerHTML = `Matched with ${otherProfile.name}! ${
         otherProfile.photo !== 'No photo'
-          ? `<br><img src="${otherProfile.photo}" alt="Profile Photo" style="max-width: 150px; border-radius: 50%; border: 2px solid #e1bf78;">`
+          ? `<br><img src="${otherProfile.photo}" alt="Profile Photo" style="max-width: 150px; border-radius: 50%; border: 2px solid var(--gold);">`
           : ''
       }`;
     }
@@ -416,6 +453,7 @@
     }
 
     function sendImageBlob(blob, name) {
+      if (!(conn && conn.open)) return;
       conn.send({ type: 'image-start', mime: blob.type, name, size: blob.size });
       const chunkSize = 16 * 1024;
       let offset = 0;
